Edited EKOprojektas.tex via GitHub

--- a/EKOprojektas.tex
+++ b/EKOprojektas.tex
@@ -87,4 +87,5 @@
 \subsection {www.stat.gov.lt;} 
 \subsection{www.lb.lt;}
 \subsection{O. Blanchard  „Makroekonomika“.}
+\subsection{Bandymas redaguoti.}
 \end{document}
